Fixes store width and overflow

--- a/app/assets/stylesheets/rooms_store.css.scss
+++ b/app/assets/stylesheets/rooms_store.css.scss
@@ -3,7 +3,7 @@
   z-index:5;
   top:45px;
   right:0px;
-  width:780px;
+  width:700px;
   height:750px;
   background-color: rgba(0,0,0,.8);
   transition:all .4s ease-in-out;
@@ -19,7 +19,7 @@
 
 .store_main_box_right {
   float:right;
-  width:740px;
+  width:660px;
   height:750px;
   background-color:#ffffff;
 }
@@ -45,8 +45,8 @@
 
 .tab-content {
   overflow: scroll;
-  width:720px;
-  height:700px;  
+  width:640px;
+  height:540px;  
 }
 
 
@@ -89,4 +89,9 @@
 .store_menu_save_cancel_remove {
   top: 45px;
   z-index: 3;
+}
+
+
+li a[href="#tab_hidden"] {
+  display: none;
 }
